# fluid-context-navigation

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.grok/skills/: hfcn-platform-scenario.md
.grok/skills/coder/: SKILL.md
.grok/skills/coding-audit/: SKILL.md
.grok/skills/coding-expert/: SKILL.md
.grok/skills/security-audit/: SKILL.md
.grok/skills/tester/: SKILL.md
hfcn/: __init__.py  __main__.py  cli.py  config.py  context_builder.py  index_manager.py  operations.py  prompts.py
hfcn_data/: index.yaml
hfcn_data/associative_nexus/clusters/: planning_tension.md
hfcn_data/categorical_frame/constraints/: resource_limits.md
hfcn_data/categorical_frame/goals/: project_alpha_q3_planning.md
hfcn_data/temporal_memory/2026/05/07/: 202605072038_user.md  202605072045_assistant.md
tests/: test_cli.py  test_context_builder.py  test_operations.py
