[project]
name = "hfcn"
version = "0.1.0"
description = "Holographic Fractal Context Navigation — a minimal, working platform for dynamic LLM context"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "HFCN Contributors"}]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
hfcn = "hfcn.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
